# bevy-getting-started

./: Cargo.toml  README.md  build.sh  run.sh
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
src/: characters.rs  getting_started.rs  getting_started_app.rs  getting_started_ecs.rs  getting_started_plugins.rs  greet.rs  main.rs  npc.rs  theme.rs  ui.rs  widgets.rs
src/characters/: npc.rs
src/getting_started/: ecs.rs  plugins.rs
src/theme/: widgets.rs
src/theme/widgets/: grid.rs  text_input.rs
src/ui/: grid.rs  grid_bundle.rs  text_input.rs
src/widgets/: grid.rs  text_input.rs
